--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,45 @@
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body>
-  <div class="container">
-  
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'recipe:list' %}">Food Recipes</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'recipe:list' %}">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Add Recipe</a>
+        </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+        
         {% if not request.user.is_authenticated %}
-            <a href={% url 'signup' %}>Register</a>
-            <a href={% url 'login' %}>Login</a>
+            <li class="nav-item">
+                <a class='nav-link' href={% url 'signup' %}>Register <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class='nav-link' href={% url 'login' %}>Login</a>
+            </li>
         {% else %}
-            <a href={% url 'logout' %}>Logout</a>
+            <li class="nav-item">
+                <a class='nav-link' href={% url 'logout' %}>Logout</a>
+            </li>
         {% endif %}
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+    </nav>
+  <div class="container-fluid">
+  
+        
 
         {% block content %}
 
