--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,14 @@
         <li class="nav-item active">
             <a class="nav-link" href="{% url 'recipe:list' %}">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Add Recipe</a>
-        </li>
+        {% if request.user.is_authenticcated %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">My Recipies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Add Recipe</a>
+            </li>
+        {% endif %}
         </ul>
         <ul class="navbar-nav ml-auto">
         
