--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -3,7 +3,8 @@
 {% block title %}Food Recipes{% endblock %}
 
 {% block content %}
-<div class="album py-5 bg-light">
+
+<div class="py-5">
     <div class="container">
         <div class="row">
 
@@ -11,20 +12,23 @@
       
     {% for recipe in page_obj %}
             <div class="col-md-4">
-            <div class="card mb-4 shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                <div class="card-body">
-                <h4 class='cart-title'>{{recipe.name}}</h4>
-                <p class="card-text">{{recipe.description}}</p>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                <div class="card mb-4 shadow-sm">
+                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <div class="card-body">
+                        <h4 class='cart-title'>{{recipe.name}}</h4>
+                        <p class="card-text">by {{recipe.user.username}}</p>
+                        <div class="d-flex justify-content-left align-items-left">
+                            {% for ingredient in recipe.ingredients.all %}
+                            <span class="badge badge-dark mr-2 mb-2">{{ingredient.name}}</span>
+                            {% endfor %}
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            
+                            <a href="{% url 'recipe:detail' recipe.pk %}" class="btn btn-primary stretched-link">View</a>
+                            <small class="text-muted">{{recipe.timestamp|timesince}} ago</small>
+                        </div>
                     </div>
-                    <small class="text-muted">9 mins</small>
                 </div>
-                </div>
-            </div>
             </div>
         
         
@@ -32,24 +36,29 @@
         </div>
     </div>
 </div>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+        <li class="page-item">
+            <a class="page-link" href="?page=1">First</a>
+        </li>
+        <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">{{page_obj.previous_page_number}}</a>
+        </li>
+    {% endif %}
+    <li class="page-item active" aria-current="page">
+      <a class="page-link" href="?page={{ page_obj.number }}">{{page_obj.number}}<span class="sr-only">(current)</span></a>
+    </li>
+    {% if page_obj.has_next %}
+    <li class="page-item">
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}">{{page_obj.next_page_number}}</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
 
-
-    <div class="pagination">
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a href="?page=1">&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-            {% endif %}
-
-            <span class="current">
-                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-            </span>
-
-            {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-            {% endif %}
-        </span>
-    </div>
 {% endblock %}
 
