--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,9 +5,14 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-  <form method="POST">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
+
+<div class="px-5 py-5">
+  <div class="container px-5">
+    <form method="POST">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
