--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,6 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"</script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tagsinput/0.8.0/bootstrap-tagsinput.js"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap-tagsinput.css' %}">
+
 
     <title>{% block title %}{% endblock %}</title>
   </head>
@@ -22,12 +28,12 @@
         <li class="nav-item active">
             <a class="nav-link" href="{% url 'recipe:list' %}">Home <span class="sr-only">(current)</span></a>
         </li>
-        {% if request.user.is_authenticcated %}
+        {% if request.user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="#">My Recipies</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Add Recipe</a>
+                <a class="nav-link" href="{% url 'recipe:create' %}">Add Recipe</a>
             </li>
         {% endif %}
         </ul>
