--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+
 <div class="py-5">
     <div class="container">
         <div class="row">
@@ -13,7 +14,9 @@
     {% for recipe in page_obj %}
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                    <div style='height:200px; overflow:hidden'>
+                        <img src="{{recipe.image_set.all.first.image.url}}" class="img-fluid card-img-top" alt="{{recipe.name}}">
+                    </div>
                     <div class="card-body">
                         <h4 class='cart-title'>{{recipe.name}}</h4>
                         <p class="card-text">by {{recipe.user.username}}</p>
