--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 <div class="px-5 py-5">
-  <div class="container px-5">
+  <div class="container w-50">
     <form method="POST">
       {% csrf_token %}
       {{ form|crispy }}
-      <button type="submit" class="btn btn-primary">Sign Up</button>
+      <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
     </form>
   </div>
 </div>
