--- a/static/css/bootstrap-tagsinput.css
+++ b/static/css/bootstrap-tagsinput.css
@@ -10,6 +10,7 @@
   max-width: 100%;
   line-height: 22px;
   cursor: text;
+  font-size: small;
 }
 .bootstrap-tagsinput input {
   border: none;
@@ -36,7 +37,9 @@
   box-shadow: none;
 }
 .bootstrap-tagsinput .tag {
-  margin-right: 2px;
+  margin: 2px;
+  padding:5px;
+  border-radius: .25rem;
   background-color:#007bff;
   color: white;
 }
@@ -52,5 +55,5 @@
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 .bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
-  box-shadow: inset 0 3px 5px #495057;
+  box-shadow: inset 0 3px 5px #007bff;
 }
