--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -13,23 +13,23 @@
       
     {% for recipe in page_obj %}
             <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div style='height:200px; overflow:hidden'>
+                <div class="card mb-4 shadow-sm" style='height:360px'>
+                    <div style='height:160px; overflow:hidden'>
                         <img src="{{recipe.image_set.all.first.image.url}}" class="img-fluid card-img-top" alt="{{recipe.name}}">
                     </div>
-                    <div class="card-body">
-                        <h4 class='cart-title'>{{recipe.name}}</h4>
+                    <div class="card-body" style='height:60%'>
+                        <h4 class='cart-title' style='height:20%'>{{recipe.name|truncatechars:20}}</h4>
                         <p class="card-text">by {{recipe.user.username}}</p>
-                        <div class="d-flex justify-content-left align-items-left">
+                        <div class="justify-content-left align-items-left" style='height:30%l; overflow:auto;'>
                             {% for ingredient in recipe.ingredients.all %}
                             <span class="badge badge-dark mr-2 mb-2">{{ingredient.name}}</span>
                             {% endfor %}
                         </div>
-                        <div class="d-flex justify-content-between align-items-center">
-                            
+                        <div class="d-flex justify-content-between align-items-center" style='margin-bottom:10px;height:40%'>
                             <a href="{% url 'recipe:detail' recipe.pk %}" class="btn btn-primary stretched-link">View</a>
                             <small class="text-muted">{{recipe.timestamp|timesince}} ago</small>
                         </div>
+                            
                     </div>
                 </div>
             </div>
@@ -46,18 +46,18 @@
             <a class="page-link" href="?page=1">First</a>
         </li>
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">{{page_obj.previous_page_number}}</a>
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{page_obj.previous_page_number}}</a>
         </li>
     {% endif %}
     <li class="page-item active" aria-current="page">
-      <a class="page-link" href="?page={{ page_obj.number }}">{{page_obj.number}}<span class="sr-only">(current)</span></a>
+      <a class="page-link" href="?page={{ page_obj.number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{page_obj.number}}<span class="sr-only">(current)</span></a>
     </li>
     {% if page_obj.has_next %}
     <li class="page-item">
-        <a class="page-link" href="?page={{ page_obj.next_page_number }}">{{page_obj.next_page_number}}</a>
+        <a class="page-link" href="?page={{ page_obj.next_page_number }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">{{page_obj.next_page_number}}</a>
     </li>
     <li class="page-item">
-      <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+      <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% for key, value in request.GET.items %}{% if key != 'page' %}&{{ key }}={{ value }}{% endif %}{% endfor %}">Last</a>
     </li>
     {% endif %}
   </ul>
