--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,11 +7,11 @@
 {% block content %}
 
 <div class="px-5 py-5">
-  <div class="container px-5">
+  <div class="container w-50">
     <form method="POST">
       {% csrf_token %}
       {{ form|crispy }}
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary btn-block">Login</button>
     </form>
   </div>
 </div>
