--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         
         {% if not request.user.is_authenticated %}
             <li class="nav-item">
-                <a class='nav-link' href={% url 'signup' %}>Register <span class="sr-only">(current)</span></a>
+                <a class='nav-link' href={% url 'signup' %}>Signup <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class='nav-link' href={% url 'login' %}>Login</a>
