--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -9,13 +9,16 @@
         <div class="row">
             <div class='col-8'>
                 <div class='row'>
-                    <div class='col-10'>
+                    <div class='col-8'>
                         <h2>{{object.name}}</h4>
                         <p>{{object.timestamp|date}} by {{object.user.username}}</p>
                     </div>
                     {% if object.user == request.user %}
                     <div class='col-2'>
                         <a href="{% url 'recipe:update' recipe.pk %}" class="btn btn-primary align-middle">Edit</a>
+                    </div>
+                    <div class='col-2'>
+                        <a href="{% url 'recipe:delete' recipe.pk %}" class="btn btn-danger align-middle">Delete</a>
                     </div>
                     {% endif %}
                 </div> 
